--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "lodash": "^4.17.15",
     "micro": "^9.3.4",
     "microrouter": "^3.1.3",
+    "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-modal": "^3.11.2",
@@ -17,9 +19,6 @@
     "test": "react-scripts test",
     "start-api": "micro api/index.js -l tcp://localhost:4000"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": [
     ">0.2%",
     "not dead",
@@ -27,7 +26,12 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "classnames": "^2.2.6",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.5.0",
     "node-sass": "^4.13.1",
     "prettier": "^1.19.1"
   }
