--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
     "micro": "^9.3.4",
+    "micro-cors": "^0.1.1",
     "microrouter": "^3.1.3",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
